# agricultural-platform

./: .replit  README.md  index.html  pyproject.toml  replit.nix
backend/: DEMO_QUERIES.md  main.py  requirements.txt  start_backend.sh  test_results_full.txt
backend/app/: main.py
backend/app/api/: __init__.py  endpoints.py
backend/app/core/: config.py  database.py  encryption.py  logging.py  mlenc.py  performance.py
backend/app/db/: __init__.py  neo4j_client.py  supabase_client.py
backend/app/models/: schemas.py
backend/app/services/: cypher_query_generator.py  graph_formatter.py  keyword_extractor.py  openai_interpreter.py  relationship_builder.py  sql_query_generator.py
backend/app/utils/: __init__.py  table_formatter.py
backend/deploy/: agricultural-api.service  deploy.sh  nginx.conf
backend/scripts/: manage_credentials.py  setup_encryption.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_cypher_generator.py  test_keyword_extractor.py  test_sql_generator.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  gradient.css  index.css
frontend/src/components/: AnimatedBackground.tsx  ComparisonView.tsx  Header.tsx  ResultsPanel.tsx  SearchInterface.tsx  StreamingText.tsx
frontend/src/hooks/: useResponsive.ts  useTypewriter.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: graphTableFormatter.ts  tableFormatter.ts
