[tool.poetry]
name = "agricultural-platform"
version = "1.0.0"
description = "Agricultural Data Platform - FastAPI Backend"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "^1.0.0"
supabase = "^2.0.0"
neo4j = "^5.14.0"
openai = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
asyncpg = "^0.29.0"
aiohttp = "^3.9.0"
loguru = "^0.7.2"
cryptography = "^41.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"