[tool.poetry]
name = "agricultural-platform"
version = "0.1.0"
description = "Agricultural Data Platform"
authors = ["Brice Tan <brice@itsnotthere.design>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
supabase = "^2.0.0"
neo4j = "^5.14.1"
openai = "^1.3.7"
httpx = "^0.25.0"
cryptography = "^41.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"